fix: eliminate horizontal scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,13 @@
 @tailwind utilities;
 
 @layer base {
-    html {
+
+    html,
+    body {
         scroll-behavior: smooth;
+        overflow-x: hidden;
+        width: 100%;
+        position: relative;
     }
 
     body {
